--- a/views/a.erb
+++ b/views/a.erb
@@ -15,7 +15,7 @@
         <div class="column">
           <h1>shiftit <span>v0.1.0</span></h1>
           <p>The subscriptions and preferences from your original account have been successfully retrieved and saved. Please <strong>log into your other account</strong> and then click the link below. This will allow shiftit to update your subscriptions and preferences.</p>
-          <button onclick="window.location.href='https://www.reddit.com/api/v1/authorize?client_id=tVDY-xn8K6vWlnlKC5oJtg&response_type=code&state=<%= @state %>&redirect_uri=https://reddit-shiftit.herokuapp.com&duration=temporary&scope=account,subscribe';">authorize this app for your second account</button>
+          <button onclick="window.location.href='https://www.reddit.com/api/v1/authorize?client_id=<%= @client_id %>&response_type=code&state=<%= @state %>&redirect_uri=<%= @redirect_uri %>&duration=temporary&scope=account,subscribe';">authorize this app for your second account</button>
         </div>
       </div>
     </div>
